--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -4,4 +4,4 @@ RUN pip install git+https://github.com/openwallet-foundation/acapy-plugins@1.3.2
 
 COPY ./configs.yml configs.yml
 
-CMD ["start", "--arg-file", "configs.yml"]
+CMD ["aca-py", "start", "--arg-file", "configs.yml"]
