--- a/agent/configs.yml
+++ b/agent/configs.yml
@@ -6,8 +6,8 @@ admin: [0.0.0.0, 8020]
 admin-insecure-mode: true
 
 inbound-transport:
-  - [ws, 0.0.0.0, 8021]
-  - [http, 0.0.0.0, 8022]
+  - ws 0.0.0.0 8021
+  - http 0.0.0.0 8022
 outbound-transport: [ws, http]
 endpoint:
   - http://localhost:8021
