--- a/agent/test-config.yml
+++ b/agent/test-config.yml
@@ -1,7 +1,8 @@
-no-ledger=true
-no-transport=true
-auto-provision=true
-admin=[0.0.0.0 8020]
-admin-insecure=true
-wallet-name=test_wallet_name
-wallet-key=test_wallet_key
+---
+no-ledger: true
+no-transport: true
+auto-provision: true
+admin: [0.0.0.0 8020]
+admin-insecure: true
+wallet-name: test_wallet_name
+wallet-key: test_wallet_key
