--- a/agent/test-config.yml
+++ b/agent/test-config.yml
@@ -2,7 +2,7 @@
 no-ledger: true
 no-transport: true
 auto-provision: true
-admin: [0.0.0.0 8020]
+admin: [0.0.0.0, 8020]
 admin-insecure: true
 wallet-name: test_wallet_name
 wallet-key: test_wallet_key
