--- a/agent/multi/Dockerfile
+++ b/agent/multi/Dockerfile
@@ -4,4 +4,7 @@ USER root
 
 RUN pip install git+https://github.com/openwallet-foundation/acapy-plugins@1.3.2#subdirectory=webvh
 
-CMD ["start"]
+USER $user
+COPY ./config.yml config.yml
+
+CMD ["start", "--arg-file", "config.yml"]
